# Project-Django1

./: README.md  catalog.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fail.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
