[tool.poetry]
name = "ProjectDjango"
version = "0.1.0"
description = ""
authors = ["Dina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
black = "^24.8.0"

static = "^1.1.1"

pytils = "^0.4.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.27.0"
django = "^5.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"